// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendResetPasswordForm should be created 1`] = `
<app-send-reset-password-form
  formBuilder={[Function FormBuilder]}
  processing="false"
  resetPassword={[Function EventEmitter]}
  resettingForm={[Function FormGroup]}
  submitted="false"
>
  <form
    class="ng-untouched ng-pristine ng-invalid"
    ng-reflect-form="[object Object]"
    novalidate=""
  >
    <app-text-input
      class="ng-untouched ng-pristine ng-invalid"
      formcontrolname="username"
      ng-reflect-help-text="HELP_FIELD_MAIL_RESET_PASSWORD"
      ng-reflect-label="EMAIL"
      ng-reflect-name="username"
      ng-reflect-placeholder="PLACEHOLDER_LOGIN"
      ng-reflect-submitted="false"
    >
      <div
        class="form-group "
      >
        <label
          class="control-label"
        >
          EMAIL
        </label>
        <input
          class="form-control"
          placeholder="PLACEHOLDER_LOGIN"
          type="text"
        />
        
        
        
        
        
        
        <small
          class="form-text text-muted"
        >
           HELP_FIELD_MAIL_RESET_PASSWORD 
        </small>
      </div>
    </app-text-input>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary btn-lg btn-block"
        ng-reflect-translate=""
        translate=""
        type="submit"
      >
         SEND_PASSWORD_RESET_MAIL 
      </button>
    </div>
  </form>
</app-send-reset-password-form>
`;

exports[`SendResetPasswordForm should disable submit button form if processing 1`] = `
<app-send-reset-password-form
  formBuilder={[Function FormBuilder]}
  processing={[Function Boolean]}
  resetPassword={[Function EventEmitter]}
  resettingForm={[Function FormGroup]}
  submitted="false"
>
  <form
    class="ng-untouched ng-pristine ng-invalid"
    ng-reflect-form="[object Object]"
    novalidate=""
  >
    <app-text-input
      class="ng-untouched ng-pristine ng-invalid"
      formcontrolname="username"
      ng-reflect-help-text="HELP_FIELD_MAIL_RESET_PASSWORD"
      ng-reflect-label="EMAIL"
      ng-reflect-name="username"
      ng-reflect-placeholder="PLACEHOLDER_LOGIN"
      ng-reflect-submitted="false"
    >
      <div
        class="form-group "
      >
        <label
          class="control-label"
        >
          EMAIL
        </label>
        <input
          class="form-control"
          placeholder="PLACEHOLDER_LOGIN"
          type="text"
        />
        
        
        
        
        
        
        <small
          class="form-text text-muted"
        >
           HELP_FIELD_MAIL_RESET_PASSWORD 
        </small>
      </div>
    </app-text-input>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary btn-lg btn-block"
        disabled=""
        ng-reflect-translate=""
        translate=""
        type="submit"
      >
         SEND_PASSWORD_RESET_MAIL 
      </button>
    </div>
  </form>
</app-send-reset-password-form>
`;
